comments on notebook 02

--- a/02 - Read ECG detect HR, analyze wave.ipynb
+++ b/02 - Read ECG detect HR, analyze wave.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "163dbd94-5f0c-4b8f-ae52-9f0a5725063c",
    "metadata": {},
    "outputs": [
@@ -66,11 +66,16 @@
    "source": [
     "data = pd.read_csv(\"assets/data_predicted.csv\", index_col='N')\n",
     "\n",
+    "# Whatever columns you want to add info in the loop, you have to create them here\n",
+    "# Soemthign like:\n",
+    "# data['points_dn'] = json.dumps([])\n",
+    "\n",
+    "\n",
     "for index, row in data.iterrows():\n",
     "    if pd.isna(row['Recording']):\n",
     "        continue\n",
     "\n",
-    "    row['Recording'] = '15:50:04'\n",
+    "    #row['Recording'] = '15:50:04'\n",
     "    # Read the ECG signal\n",
     "    with open(f\"assets/ecg/{row['Recording']}.dat\", 'rb') as f:\n",
     "        values = np.frombuffer(f.read(), dtype=np.int16)\n",
@@ -116,237 +121,17 @@
     "    fiducials = fpex.get_fiducials(s=s)\n",
     "    fp = Fiducials(fp=fiducials)\n",
     "    plot_fiducials(s=s, fp=fp, savefig=False, show_fig=True, print_flag=True, use_tk=False)\n",
-    "    break\n",
+    "\n",
+    "    # data to dataframe\n",
+    "    # data['points_sp_real'] = json.dumps(list(fiducials['sp'].values()))\n",
+    "    # somethign similar to:\n",
+    "    # points_dn = (fiducials['dn']/fps).astype(float).tolist()\n",
+    "    # data.loc[index, 'points_dn'] = json.dumps(points_dn)\n",
+    "    #break\n",
     "\n",
     "\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7922516b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "135a53fb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f383f34b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fiducials"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b9179282",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "69df50c6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bd03fd93",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d0c9c071",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "60973e9e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "61529b91",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "db77bdf9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ea4c045d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import cv2\n",
-    "import numpy as np\n",
-    "import time\n",
-    "import logging\n",
-    "import tempfile\n",
-    "import copy\n",
-    "import traceback\n",
-    "from pyPPG import PPG, Fiducials\n",
-    "from pyPPG.datahandling import load_data\n",
-    "import pyPPG.fiducials as FP\n",
-    "\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import scipy.io\n",
-    "import matplotlib.pyplot as plt\n",
-    "from scipy.signal import filtfilt, tf2zpk, freqz, cheby2, firwin\n",
-    "from scipy.signal import kaiserord, firwin, filtfilt, detrend, periodogram, lfilter, find_peaks, firls, resample\n",
-    "from dotmap import DotMap\n",
-    "\n",
-    "\n",
-    "s = PPG(s=signal, check_ppg_len=True)\n",
-    "s\n",
-    "\n",
-    "\n",
-    "corr_on = ['on', 'dn', 'dp', 'v', 'w', 'f']\n",
-    "correction=pd.DataFrame()\n",
-    "correction.loc[0, corr_on] = True\n",
-    "signal.correction=correction\n",
-    "\n",
-    "# Extract fiducial points\n",
-    "fpex = FP.FpCollection(s=s)\n",
-    "self = fpex\n",
-    "\n",
-    "# Extract Fiducial Points\n",
-    "ppg_fp=pd.DataFrame()\n",
-    "peaks, onsets = fpex.get_peak_onset('PPGdet')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8f9bc7d8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "257bac59",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0fcea1b5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "90c75382",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(s.ppg)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1aabe048",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fps"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d24ace21-020e-4de6-aaaa-bcc7a0b4e99a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# extract array from df\n",
-    "json.loads(data.loc[1, 'points_sp'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ddf4c67c-c6f4-43d1-9532-1026c9331f81",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5fd8ec0b-a4eb-4311-a011-5632dc0ee320",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "path = \"assets/ecg/15:53:33.dat\"\n",
-    "with open(path, 'rb') as f:\n",
-    "    values = np.frombuffer(f.read(), dtype=np.int16)\n",
-    "    T = 30 / len(values)  # all recording have a duration of 30 seconds\n",
-    "plt.plot(values)\n",
-    "plt.show()\n",
-    "\n",
-    "time = np.arange(0, len(values[:1000])) *T\n",
-    "plt.plot(time, values[3000:4000])\n",
-    "plt.xlabel('Time (seconds)')\n",
-    "plt.ylabel('Amplitude')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "12cf5ee1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -364,18 +149,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.15"
   }
  },
  "nbformat": 4,
